# logical_expression_expansion

./: LICENSE  README.md  pyproject.toml  setup.cfg
Testing/: test_combine_layers.py  test_combine_single_layer.py  test_expand_expression.py  test_find_bracketed_term.py  test_prime_conversion.py
src/: combine_layers.py  combine_single_layer.py  expand_expression.py  expandexpression.py  expressionprimeconversion.py  find_bracketed_term.py  prime_conversion.py  temp.py
src/expandexpression/: expandexpression.py
src/expression_expansion/: __init__.py  expandexpression.py
tests/: test_combine_single_layer.py  test_expandexpression.py  test_expressionprimeconversion.py  test_find_bracketed_term.py
