[metadata]
name = logical_expression_expansion
version = 0.0.1
author = Robert Dermarkar
author_email = r.dermarkar@gmail.com
description = Expands logical expressions to remove brackets
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = https://github.com/dermarkr/logical_expression_expansion/issues
    repository = https://github.com/dermarkr/logical_expression_expansion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src