[metadata]
name = logical_expression_expansion
version = 1.0.3
author = Robert Dermarkar
author_email = r.dermarkar@gmail.com
description = Expands logical expressions to remove brackets
long_description = file: README.md LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/dermarkr/logical_expression_expansion
project_urls =
    Bug Tracker = https://github.com/dermarkr/logical_expression_expansion/issues
    repository = https://github.com/dermarkr/logical_expression_expansion
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = ["expression_expansion"]
python_requires = >=3.9

[options.packages.find]
where = src
